public/styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  scrollbar-color: #9290C3 #1B1A55;
}

.libre-franklin {
  font-family: "Libre Franklin", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

header {
  position: sticky;
  top: 0;
  background-image: linear-gradient(to right, #070F2B , #1B1A55);
  z-index: 100;
}

body {
  background-image: linear-gradient(to right, #070F2B , #1B1A55);
  color: #EEEEEE;
  font-family: "Libre Franklin";
}

nav {
  box-shadow: 0 0 100px 0px rgba(0,0,0,.2);
}

.navbar {
  display: flex;
  align-items: center;
  gap: 1rem;
  justify-content: space-between;
  max-width: 1200px;
  margin: 0 auto;
  font-size: 1.5rem;
  padding: 1rem;
  border-bottom: 3px solid #535C91;
}

.navBarTitleLink:active, .navBarTitleLink:link, .navBarTitleLink:visited {
  color: #EEEEEE;
  text-decoration: underline #d3843d;
}

.navBarTitleLink {
  display: flex;
  align-items: center;
  gap: .5rem


}

.navbar button {
  font-size: 1.5rem;
  color: #EEEEEE;
  background-color: transparent;
  border-radius: 15px;
  

}

.navBarButtons {
  display: flex;
  gap: 2rem;
}

.navBarButtons > button, .navbar a button {
  font-weight: 900;
  border: none;
  cursor: pointer;
  padding: 0.3rem 1rem;
  border: 2px solid #535C91;
  transition: border .3s ease-in-out;
  height: 100%;
}



.navBarButtons button:hover {
  border: 2px solid #EEEEEE;
}



.mainContainer, .indexFirstSection {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1rem;
}

.indexFirstSection {
  margin: 2rem auto;
}

.indexImgAndParaContainer {
  font-size: 1.7rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
  margin-top: 1rem;
  justify-items: center;
  text-align: center;
  align-items: center;
}

.indexImgAndParaContainer div {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.indexImgAndParaContainer img {
  max-width: 400px;
  max-height: 400px;
  width: 100%;
  height: 100%;
  object-fit: contain;
  border-radius: 50%;
  border: 10px solid #9290C3;
  
}

.mainItemType {
  margin: 1rem 0;
}

.homeMainCont {
  padding: 0.5rem 1rem;
  border: 4px solid #535C91;
  border-radius: 15px;
  padding: 1rem;
  transition: border .3s ease-in-out;
}

.titleAndDeleteBtnCont {
  display: flex;
  justify-content: space-between;
}

.deleteBookBtn, .editBookBtn {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.deleteBookIcon, .deleteBtnIcon {
  filter: invert(10%) sepia(61%) saturate(7434%) hue-rotate(359deg) brightness(103%) contrast(114%);
  
}


.homeMainCont:hover {
  border: 4px solid #676d92;
  
}

.mainUl {
  display: flex;
  flex-direction: column;
  padding: 0;
  list-style-type: none;
  gap: 1rem;
  margin: 0 0 2rem;
}

.mainUl a, .mainUl a:visited, .mainUl {
  color:#EEEEEE;
  text-decoration: none;
}

.mainItemTitle {
  font-size: 1.4rem;
  margin: 0 0 1rem 0;
  display: inline-block;
  position: relative;
  /* text-decoration: underline #EEEEEE;
  text-underline-offset: .1em;
  transition: text-decoration 300ms, text-underline-offset 300ms ease-in-out; */
}

.mainItemTitle::after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: -.1rem;
  left: 0;
  background-color: #d3843d;
  transition: transform 0.25s ease-out;
}

.homeMainCont:hover .mainItemTitle::after {
  transform: scaleX(1);
}

.mainItemTitle::after {
  transform-origin: bottom left;


}


.mainItemImageCont {
  position: relative;
  text-align: center;
}
.missingCoverText {
  position: absolute;
  font-weight: 500;
  width: 100%;
  z-index: 3;
  top: 30%;
}

.bookImg {
  width: 100%;
  height: 100%;
  position: relative;

}

.mainItemImgAndDescCont {
  display: grid;
  grid-template-columns: .7fr 3fr;
  gap: 1rem;
}

.mainItemImage {
  border: 3px solid #535C91;
  width: 130px;
  border-radius: 15px;
  height: 170px;
}

.mainItemDescription {
  font-size: 1.2rem;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  line-height: 2rem;
}

.seeMoreBooksLink, .seeMoreBooksLink:visited, .seeMoreBooksLink:active {
  text-align: center;
  text-decoration: 2px #EEEEEE underline;
  color:#EEEEEE;
  display: block;
  margin: 0 auto 2rem;
  text-underline-offset: .3rem;
}

.errorContainer {
  list-style-type: none;
  list-style-position: inside;
  font-size: 1rem;
  margin: 1rem auto;
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr 1fr;
  text-underline-offset: 5px;
}

.errorContainer li {
  font-size: 1rem;
  text-decoration: underline dotted #cc0000 2px;
  
}

.errorContainer li::before {
  content: url('feedback_icon.svg');
  position: relative;
  margin-right: .7rem;
  top: .5rem;

}

.errorMsg {
  line-height: 2rem;
  white-space: pre-line;
}

.createFormMainContainer {
  max-width: 1200px;
  margin: 2rem auto;
  font-size: 1.2rem;
  padding: 0 1rem;
}

.createFieldSet {
  padding: 1rem 1rem;
  border-radius: 15px;
  border: 3px solid #535C91;
}

.selectItemLegend {
  font-size: 1.4rem;
  padding: 0 1rem;
  margin-left: -2rem;
}

.selectItemTypeHeader {
  margin: 1rem 0;
  padding: 0;
}

.itemTypeInnerContainer {
  display: flex;
  flex-direction: column;
  max-width: 300px;
  gap: 1rem;
}

.itemTypeInnerContainer, .itemTypeInnerContainer select, .itemTypeInnerContainer button {
  font-size: 1.4rem;
}

.itemTypeInnerContainer select {
  padding: .5rem 1rem;

}

.itemTypeInnerContainer button {
  padding: .5rem 1rem;
  border-radius: 30px;
  cursor: pointer;
}

.add-book-form {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.add-bookFieldSet {
  display: grid;
  grid-template-columns: .8fr 1fr;
  gap: 2rem;
}

.addBookLabelAndInputCont, .deleteBookAdminLabelAndInput {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-size: 1.4rem;
  margin-bottom: 1rem;
  min-width: none;
}

.addBookLabelAndInputCont input, textarea, .deleteBookAdminLabelAndInput input {
  border-radius: 7px;
  font-size: 1.4rem;
  padding: .5rem 1rem;
  background-color: #535C91;
  border: 2px solid #535C91;
  color: #EEEEEE;
}

.textAuthPubQuantCont {
  position: sticky;
  top: 7em;
  height: min-content;
  z-index: 0;
}

select {
  background-color: #535C91;
  border: 2px solid #535C91;
  color: #EEEEEE;
  border-radius: 7px;
}

.descriptionTextAreaCont {
  width: 90%;
  max-width: 100%;
}

textarea {
  height: 100%;
  padding: .5rem;
  resize: vertical;
}

.addImageUrlCont {
  max-width: 500px;
}

.addBookBtnCont {
  display: flex;
  justify-content: flex-end;
}

.addBookBtn {
  font-size: 1.4rem;
  padding: .5rem 3rem;
  border-radius: 30px;
  cursor: pointer;
  margin-top: 1rem;
  max-width: 300px;
  align-self: flex-end;
  font-weight: 600;
}

.bookIconPng {
  position: fixed;
  z-index: -2;
  right: 3rem;
  rotate: 30deg;
  filter: opacity(.10);
  top: 70px;
  animation: 5s glow ease-out 2s infinite;
}

.controllerIconPng {
  position: fixed;
  rotate: -30deg;
  filter: opacity(.10);
  z-index: -2;
  left: 3rem;
  top: 70px;
  animation: 5s glow ease-in-out 2s infinite;
}

.orangeBtn {
  background-image: linear-gradient(to right, #FFBF00, #eea406);
}

.deleteFormTextCont {
  text-align: center;
}

.deleteFormTextCont p {
  font-size: 1.5rem;
}

.deleteTitle {
  margin: 2rem 0;
}

.deleteBookCoverCont {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
}

.deleteBookCoverCont img {
  max-width: 300px;
}


.deleteCancelCont{
  display: flex;
  align-items: center;
  gap: 1rem;
  margin-bottom: 2rem;
}

.deleteBookFormErrorCont, .deleteBookFormErrorCont ul {
  text-align: center;
  display: block;
}

.deleteBookAdminLabelAndInput input {
  text-align: center;
}

.deleteBtn {
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.deleteCancelLink {
  color: #EEEEEE;
  font-size: 1.5rem;
}

/* Form Validation Error borders */

/* input:invalid, textarea:invalid {
  border: 3px solid #cc0000;
}

input:valid, textarea:valid {
  border: none;
} */

@media (max-width: 1000px) {
  .bookIconPng {
    display: none;
    
  }
  .controllerIconPng {
    display: none;
  }
}

@media (max-width: 1700px) {
  .bookIconPng {
   animation: none;
    
  }
  .controllerIconPng {
    animation: none;

  }
}

@media (max-width: 850px) {
  .navbar, .navbar a button, .navbar button {
    font-size: .7rem;
  }

  .navBookIcon {
    height: 1.1rem;
  }



  .errorContainer {
    grid-template-columns: 1fr;
  }

  .mainItemImgAndDescCont {
    grid-template-columns: 1fr;
    max-width: 480px;
    margin: 0 auto;
    place-items: center;

  }


  .mainItemImageCont {
    max-width: 500px;
    max-height: 500px;
    width: 100%;
    height: 100%;
    margin-bottom: 2rem;
  }
  .missingCoverText {
    font-size: 2em;

    left: 0;
  }

  .mainItemImageCont img {

    width: 100%;
    height: 100%;
    object-fit: scale-down;

    
  }

  .mainItemTitle {
    text-align: center;
    width: 100%;
  }
  .mainItemTitle::after {
    transform-origin: bottom center;
  
  
  }


  }

  @media (max-width: 800px) {
    .add-bookFieldSet {
      grid-template-columns: 1fr;
    }

    .textAuthPubQuantCont {
      position: static;
    }

    .titleAndDeleteBtnCont {
      position: relative;
    }

    .titleAndDeleteBtnCont:nth-child(2) {
      position: absolute;

    }

    .titleAndDeleteBtnCont div {
      position: absolute;
      display: flex;
      gap: 1rem;
      top: 0;
      right: 0;
    }

    }

@media (max-width: 500px) {
.navbar, .navbar a button, .navbar button {
  font-size: .5rem;
}

.missingCoverText {
  font-size: 1.2em;
  right: 0%;
}

.navBookIcon {
  height: .9rem;
}

.navBarButtons {
  gap: .5rem;
}
}

@keyframes glow {
  from {
    filter: opacity(.10);
  }

  20% {
    filter: opacity(.5);
  }

  50% {
    filter: opacity(.10);
  }

  100% {
    filter: opacity(.10);
  }
}

